add new website from server na

--- a/xem-phim-bo/hau-phu-phu-nhan-khong-de-lam/index.html
+++ b/xem-phim-bo/hau-phu-phu-nhan-khong-de-lam/index.html
@@ -1187,7 +1187,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             7
+             8
             </dd>
             <br/>
            </dl>
@@ -1657,40 +1657,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/not-nhac-cua-miles-davis" title="Nốt nhạc của Miles Davis">
+          <a class="list-top-movie-link" href="/phim-moi/tho-san-ke-giet-nguoi" title="Thợ Săn Kẻ Giết Người">
            <span class="status">
-            HD Vietsub
+            HD Thuyết Minh
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/not-nhac-cua-miles-davis-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tho-san-ke-giet-nguoi-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Nốt nhạc của Miles Davis
+             Thợ Săn Kẻ Giết Người
             </span>
             <span class="list-top-movie-item-en">
-             Miles Davis: Birth of the Cool
-            </span>
-            <span class="list-top-movie-item-view">
-             1 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/her-fatal-ways" title="Her Fatal Ways">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/her-fatal-ways-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Her Fatal Ways
-            </span>
-            <span class="list-top-movie-item-en">
-             Her Fatal Ways
+             Hunter Hunter
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1701,40 +1679,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/dead-shot" title="Dead Shot">
+          <a class="list-top-movie-link" href="/phim-moi/ong-lao-tot-bung" title="Ông Lão Tốt Bụng">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/dead-shot-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ong-lao-tot-bung-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Dead Shot
+             Ông Lão Tốt Bụng
             </span>
             <span class="list-top-movie-item-en">
-             Dead Shot
-            </span>
-            <span class="list-top-movie-item-view">
-             1 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/song-phi-lam-mon" title="Song phì lâm môn">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/song-phi-lam-mon-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Song phì lâm môn
-            </span>
-            <span class="list-top-movie-item-en">
-             Double Fattiness
+             Black Snake Moan
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1745,18 +1701,62 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/magi-vuong-quoc-ma-thuat-2" title="Magi: Vương Quốc Ma Thuật 2">
+          <a class="list-top-movie-link" href="/phim-moi/cau-be-spirou" title="Cậu bé Spirou">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/magi-vuong-quoc-ma-thuat-2-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cau-be-spirou-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Magi: Vương Quốc Ma Thuật 2
+             Cậu bé Spirou
             </span>
             <span class="list-top-movie-item-en">
-             Magi: The Kingdom of Magic
+             Little Spirou
+            </span>
+            <span class="list-top-movie-item-view">
+             3 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/black-or-white" title="Black or White">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/black-or-white-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Black or White
+            </span>
+            <span class="list-top-movie-item-en">
+             Black or White
+            </span>
+            <span class="list-top-movie-item-view">
+             3 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/elegy" title="Elegy">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/elegy-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Elegy
+            </span>
+            <span class="list-top-movie-item-en">
+             Elegy
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
